fix problem on small screen

--- a/src/components/layout/MenuBar/MenuBar.module.scss
+++ b/src/components/layout/MenuBar/MenuBar.module.scss
@@ -80,6 +80,7 @@
 
         form {
           width: 550px;
+          padding-top: 5px;
 
           div {
             width: 50%;
@@ -144,3 +145,12 @@
   }
 }
 
+@media (max-width: 324px) {
+  .root {
+    .wrapper {
+      .search {
+        width: 85%;
+      }
+    }
+  }
+}
